@@ -37,13 +37,13 @@ class Smarty_Internal_SmartyTemplateCompiler extends Smarty_Internal_TemplateCom
        tags in the templates are replaces with PHP code,
        then written to compiled files. */ 
         // init the lexer/parser to compile the template
-        $lex = new $this->lexer_class($_content,$this->smarty);
-        $parser = new $this->parser_class($lex, $this); 
-        // $parser->PrintTrace();
+        $this->lex = new $this->lexer_class($_content,$this->smarty);
+        $this->parser = new $this->parser_class($this->lex, $this); 
+        // $this->parser->PrintTrace();
         // get tokens from lexer and parse them
-        while ($lex->yylex() && !$this->abort_and_recompile) {
-            // echo "Line {$lex->line} Parsing  {$parser->yyTokenName[$lex->token]} Token <pre>".htmlentities($lex->value)."</pre>";
-            $parser->doParse($lex->token, $lex->value);
+        while ($this->lex->yylex() && !$this->abort_and_recompile) {
+            // echo "Line {$this->lex->line} Parsing  {$this->parser->yyTokenName[$this->lex->token]} Token <pre>".htmlentities($this->lex->value)."</pre>";
+            $this->parser->doParse($this->lex->token, $this->lex->value);
         } 
 
         if ($this->abort_and_recompile) {
@@ -51,7 +51,7 @@ class Smarty_Internal_SmartyTemplateCompiler extends Smarty_Internal_TemplateCom
             return false;
         } 
         // finish parsing process
-        $parser->doParse(0, 0); 
+        $this->parser->doParse(0, 0); 
         // check for unclosed tags
         if (count($this->_tag_stack) > 0) {
             // get stacked info
@@ -61,7 +61,7 @@ class Smarty_Internal_SmartyTemplateCompiler extends Smarty_Internal_TemplateCom
 
         if (!$this->compile_error) {
             // return compiled code
-            return str_replace(array("?>\n<?php","?><?php"), array('',''), $parser->retvalue);
+            return str_replace(array("?>\n<?php","?><?php"), array('',''), $this->parser->retvalue);
         } else {
             // compilation error
             return false;
